--- a/Decision Trees/Decision Trees.ipynb
+++ b/Decision Trees/Decision Trees.ipynb
@@ -35,10 +35,10 @@
     "Three kinds of nodes:\n",
     "- **Root Node**: no parent node, question giving rise to two children nodes.\n",
     "- **Internal Node**: one parent node, question giving rise to two children nodes.\n",
-    "- **Leaf Node**: one parent node, no children nodes $\\rightarrow$  prediction.\n",
+    "- **Leaf Node**: one parent node, no children nodes (shows the prediction).\n",
     "- **Branch**: connection between parent and child node, signifies true or false.  \n",
     "\n",
-    "![alt text](images\\tree.png \"Title\")\n",
+    "<img src=\"images/tree.PNG\" width=\"800\">\n",
     "\n",
     "In the tree example above we see a max depth of 2 (root node counting as a depth of 0), with a total of 2 internal nodes, and 4 leaves. The values A, B, C are considered split points for the different features of $x_i$."
    ]
