--- a/Decision Trees/Decision Trees.ipynb
+++ b/Decision Trees/Decision Trees.ipynb
@@ -95,7 +95,7 @@
     "The best parameters are selected by maximizing information gain\n",
     "\n",
     "$$\n",
-    "\\theta^* = \\underset{\\theta \\in \\theta^{m} }{\\operatorname{argmax}} G(Q_m, \\theta) \n",
+    "\\theta^* = \\text{argmax}_{\\theta \\in \\theta^{m}} G(Q_m, \\theta) \n",
     "$$\n",
     "\n",
     "We then recurse for the subsets $Q_{left}(\\theta^*)$ and $Q_{right}(\\theta^*)$ until the max depth for the tree is reached, $N_m$ is less then the minimum samples allowed per node, $N_m =  1$, or the information gain of that node is 0 in which case it becomes a leaf.\n",
