--- a/Decision Trees/Decision Trees.ipynb
+++ b/Decision Trees/Decision Trees.ipynb
@@ -205,6 +205,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble Learning \n",
+    "\n",
+    "Some techniques, often called ensemble methods, construct more than one decision tree: \n",
+    "- **Gradient Tree Boosting**: Incrementally building an ensemble by training each new instance to emphasize the training instances previously mis-modeled. \n",
+    "    - Most common methods are **AdaBoost** and **Gradient Boosting Machines** (GBMs).\n",
+    "    - Popular variantes of GBM are **XGBoost**, **LightGBM**, and **CatBoost**.\n",
+    "- **Bootstrap Aggregating**: or bagging classifier, is an early ensemble method, that builds multiple decision trees by repeatedly resampling training data with replacement, and voting the trees for a consensus prediction.\n",
+    "- **Random Forest**: creates multiple decision trees at training time, using the bagging method above, and outputting the class that is the mode of the classes of the individual trees. In other words, a random forest builds multiple decision trees and merges them together to get a more accurate and stable prediction.\n",
+    "    - **Extremely Randomized Trees** are a type of random forest where thresholds are drawn at random for each candidate feature and the best of these randomly-generated thresholds is picked as the splitting rule. This usually allows to reduce the variance of the model a bit more, at the expense of a slightly greater increase in bias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
