--- a/Decision Trees/Decision Trees.ipynb
+++ b/Decision Trees/Decision Trees.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Tutorial:** Decision Trees for Classification"
+    "# **Tutorial:** Decision Trees"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decision trees are a supervised learning method used for classification (the focus of this tutorial) and regression. The goal is to create a model that predicts the value of a label $y_i$ by learning simple decision rules (if-else rules) inferred from the features vector $x_i$.\n",
+    "Decision trees are a supervised learning method used for classification and regression. The goal is to create a model that predicts the value of a label $y_i$ by learning simple decision rules (if-else rules) inferred from the features vector $x_i$.\n",
     "\n",
     "**Some advantages of decision trees are:**\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "<img src=\"images/tree.PNG\" width=\"800\">\n",
     "\n",
-    "In the tree example above we see a max depth of 2 (root node counting as a depth of 0), with a total of 2 internal nodes, and 4 leaves. The values A, B, C are considered split points for the different features of $x_i$."
+    "In the tree example above, for classification prediction, we see a max depth of 2 (root node counting as a depth of 0), with a total of 2 internal nodes, and 4 leaves. The values A, B, C are considered split points for the different features of $x_i$."
    ]
   },
   {
@@ -73,7 +73,7 @@
    "source": [
     "## Mathematical Formulation\n",
     "\n",
-    "Most of the aforementioned tree generating algorithms are based on the following mathematical formulation. We are given a set of training samples in the form of $(x_i, y_i)$ where $x_i$ is the predictor variable with $k$ features (attributes) $x_i = x_{i,1},x_{i,2},...,x_{i,k}$, and $y_i$ is the target variable (label). A decision tree recursively partitions (divides) the space such that the samples with the same labels are grouped together.\n",
+    "Most of the aforementioned tree generating algorithms, particularly CART, are based on the following mathematical formulation. We are given a set of training samples in the form of $(x_i, y_i)$ where $x_i$ is the predictor variable with $k$ features (attributes) $x_i = x_{i,1},x_{i,2},...,x_{i,k}$, and $y_i$ is the target variable (label). A decision tree recursively partitions (divides) the space such that the samples with the same labels are grouped together.\n",
     "\n",
     "---\n",
     "*Recursion*: \n",
@@ -116,14 +116,24 @@
     "\n",
     "Gini is intended for continuous features and is faster to compute, but it does not perform well when the number of classes is large (ideal for binary classification).\n",
     "\n",
-    "Entropy is used more for categorical features, is biased toward multivalued features, and used more for exploratory data analysis. Gini is used by CART, while entropy is used by ID3, C4.5, and C5.0 tree-generation algorithms.\n"
+    "Entropy is used more for categorical features, is biased toward multivalued features, and used more for exploratory data analysis. Gini is used by CART, while entropy is used by ID3, C4.5, and C5.0 tree-generation algorithms.\n",
+    "\n",
+    "### Impurity Measures (Regression Criteria)\n",
+    "\n",
+    "If the target is a continuous value, then for node $m$, locations for future splits are Mean Squared Error (MSE), which minimizes the L2/Ridge error using mean values at terminal nodes, and Mean Absolute Error (MAE), which minimizes the L1/Lasso error using median values at terminal nodes.\n",
+    "\n",
+    "In both cases we first estimate the mean of the observations $ \\bar{y}_m = \\frac{1}{N_m} \\sum_{i \\in N_m} y_i $\n",
+    "\n",
+    "**MSE**: $ H(Q_m) = \\frac{1}{N_m} \\sum_{i \\in N_m} (y_i - \\bar{y}_m)^2 $\n",
+    "\n",
+    "**MAE**: $ H(Q_m) = \\frac{1}{N_m} \\sum_{i \\in N_m} |y_i - \\bar{y}_m| $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sklearn Code Tutorial"
+    "## Example Sklearn Code for Classification"
    ]
   },
   {
@@ -215,7 +225,7 @@
     "    - Most common methods are **AdaBoost** and **Gradient Boosting Machines** (GBMs).\n",
     "    - Popular variantes of GBM are **XGBoost**, **LightGBM**, and **CatBoost**.\n",
     "- **Bootstrap Aggregating**: or bagging classifier, is an early ensemble method, that builds multiple decision trees by repeatedly resampling training data with replacement, and voting the trees for a consensus prediction.\n",
-    "- **Random Forest**: creates multiple decision trees at training time, using the bagging method above, and outputting the class that is the mode of the classes of the individual trees. In other words, a random forest builds multiple decision trees and merges them together to get a more accurate and stable prediction.\n",
+    "- **Random Forest**: an advanced bagging classifier that creates multiple decision trees at training time and outputs the class that is the mode of the classes of the individual trees. In other words, a random forest builds multiple decision trees and merges them together to get a more accurate and stable prediction.\n",
     "    - **Extremely Randomized Trees** are a type of random forest where thresholds are drawn at random for each candidate feature and the best of these randomly-generated thresholds is picked as the splitting rule. This usually allows to reduce the variance of the model a bit more, at the expense of a slightly greater increase in bias"
    ]
   },
