--- a/Decision Trees/Decision Trees.ipynb
+++ b/Decision Trees/Decision Trees.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Tutorial:** Decision Trees"
+    "# **Tutorial:** Decision Trees\n",
+    "\n",
+    "## By Kostas Hatalis"
    ]
   },
   {
@@ -230,11 +232,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References\n",
+    "\n",
+    "[1] Friedman, Jerome, Trevor Hastie, and Robert Tibshirani. The elements of statistical learning. Vol. 1. No. 10. New York: Springer series in statistics, 2001.\n",
+    "\n",
+    "[2] https://scikit-learn.org/stable/modules/tree.html\n",
+    "\n",
+    "[3] https://en.wikipedia.org/wiki/Decision_tree_learning\n",
+    "\n",
+    "[4] https://en.wikipedia.org/wiki/Information_gain_in_decision_trees"
+   ]
   }
  ],
  "metadata": {
