--- a/Random Walks/Random Walks.ipynb
+++ b/Random Walks/Random Walks.ipynb
@@ -4,33 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Time Series Analysis: Random Walk Hypothsis** "
+    "# **Tutorial: Random Walk Hypothsis** "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### By Kostas Hatalis "
+    "## By Kostas Hatalis "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Syllabus"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Topics:\n",
+    "\n",
     "1. White Noise\n",
     "2. Random Walks\n",
     "3. Differencing and Residual Series\n",
-    "4. Histogram of Residual Series\n",
-    "5. Monte Carlo Analysis of Random Walks\n",
-    "6. Random Walk Hypothesis: Example on Apple Stock"
+    "4. Histogram of a Series\n",
+    "    -   Monte Carlo Analysis of Random Walks\n",
+    "5. Autocorrelation of a Series\n",
+    "6. Random Walk Hypothesis\n",
+    "7. Analysis of Apple Stock"
    ]
   },
   {
