--- a/Ensemble Learning/Ensemble Learning.ipynb
+++ b/Ensemble Learning/Ensemble Learning.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Model complexity sets the flexibility of $\\hat{f}$. The more complex the model $ \\hat{f}(x)$ is, the more data points it will capture, and the lower the bias will be. However, complexity will make the model \"move\" more to capture the data points, and hence its variance will be larger. Typically, as you increase the complexity of your model, you will see a reduction in error due to lower bias in the model. However, this only happens until a particular point. As you continue to make your model more complex, you end up overfitting your model, and hence your model will start suffering from the high variance.\n",
     "\n",
-    "<img src=\"images/complex.png\" width=\"400\">\n"
+    "<img src=\"images/complx.png\" width=\"400\">\n"
    ]
   },
   {
@@ -93,13 +93,13 @@
     "___\n",
     "## **Voting**\n",
     "\n",
-    "Voting is to combine 2 or more different machine learning methods and use a majority vote (hard vote) or the average predicted probabilities (soft vote) to predict the class labels. Such a classifier can be useful for a set of equally well performing model in order to balance out their individual weaknesses.\n",
+    "Voting methods, also known as averaging methods, is to combine 2 or more different machine learning methods and use a majority vote (hard vote) or the average predicted probabilities (soft vote) to predict the class labels. Such a classifier can be useful for a set of equally well performing model in order to balance out their individual weaknesses. On average, the combined estimator is usually better than any of the single base estimator **because its variance is reduced.**\n",
     "\n",
     "**Hard Voting:** the predicted class label for a particular sample is the class label that represents the mode (set of labels that appear most often) of the class labels predicted by each individual classifier.\n",
     "\n",
     "**Soft Voting:** the predicted class label for a particular sample is max of the average predicted probabilities from all classifiers for every class.\n",
     "\n",
-    "<img src=\"images/voting.PNG\" width=\"800\">"
+    "<img src=\"images/voting.PNG\" width=\"800\">\n"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "eclf = VotingClassifier(estimators=[('lr', clf1), ('rf', clf2), ('gnb', clf3)], voting='hard')\n",
     "\n",
     "# run CV on each classifier\n",
-    "for clf, label in zip([clf1, clf2, clf3, eclf], ['Logistic Regression', 'Random Forest', 'naive Bayes', 'Ensemble']):\n",
+    "for clf, label in zip([clf1, clf2, clf3, eclf], ['Logistic Regression', 'Random Forest', 'naive Bayes', 'Voting Ensemble']):\n",
     "    scores = cross_val_score(clf, X, y, cv=5, scoring='accuracy')\n",
     "    print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))\n",
     "\n",
@@ -154,7 +154,7 @@
     "grid = grid.fit(X, y)\n",
     "\n",
     "print()\n",
-    "print(\"Best parameters set found in grid search:\")\n",
+    "print(\"Best parameters set found in grid search CV for voting classifier:\")\n",
     "print(grid.best_params_)\n",
     "print(\"Accuracy: %0.2f\" % grid.best_score_ )"
    ]
@@ -166,7 +166,66 @@
     "___\n",
     "## **Bagging**\n",
     "\n",
-    "Bagging, also known as bootstrap aggregation, "
+    "Bagging, also known as bootstrap aggregation, is an ensemble method involving training the same algorithm many times using different subsets sampled with replacement (known as boostrap sampling) from the training data. It then aggregates their individual predictions (either by voting or by averaging) to form a final prediction. Such a meta-estimator can typically be used as a way to **reduce the variance** of a base estimator (e.g., a CART or ANN), by introducing randomization into its construction procedure and then making an ensemble out of it.\n",
+    "\n",
+    "*As they provide a way to reduce overfitting, **bagging methods work best with strong and complex models** (e.g., fully developed decision trees), in contrast with boosting methods which usually work best with weak models (e.g., shallow decision trees).*\n",
+    "\n",
+    "*When bagging with decision trees, we are less concerned about individual trees overfitting the training data. For this reason and for efficiency, the individual decision trees are grown deep (e.g. few training samples at each leaf-node of the tree) and the trees are not pruned. These trees will have both high variance and low bias. These are important characterize of sub-models when combining predictions using bagging. The only parameters when bagging decision trees is the number of samples and hence the number of trees to include. This can be chosen by increasing the number of trees on run after run until the accuracy begins to stop showing improvement.*\n",
+    "\n",
+    "Bagging methods come in many flavours but mostly differ from each other by the way they draw random subsets of the training set:\n",
+    "- **Bagging**: samples are drawn with replacement.\n",
+    "- **Pasting**: samples are drawn without replacement (need big training set).\n",
+    "- **Random Subspaces**: random subsets of the dataset are drawn as random subsets of the features.\n",
+    "- **Random Patches**: when base estimators are built on subsets of both samples and features.\n",
+    "\n",
+    "**Advantages:**\n",
+    "- Reduces over-fitting of the model.\n",
+    "- Handles higher dimensionality data very well.\n",
+    "- Maintains accuracy for missing data.\n",
+    "\n",
+    "**Disadvantages:**\n",
+    "- Since final prediction is based on the mean predictions from subset trees, it won’t give precise values for the classification and regression model.\n",
+    "\n",
+    "**Random Forest**: is an algorithm (explained in another Notebook) that makes a small tweak to Bagging and results in a very powerful prediction method.\n",
+    "\n",
+    "<img src=\"images/bagging.PNG\" width=\"800\">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.92 (+/- 0.02) [Decision Tree]\n",
+      "Accuracy: 0.96 (+/- 0.03) [Bagging]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# load data\n",
+    "data = load_breast_cancer()\n",
+    "X, y = data.data, data.target\n",
+    "\n",
+    "# Instantiate a classification-tree 'dt'\n",
+    "dt = DecisionTreeClassifier(random_state=1)\n",
+    "\n",
+    "# Instantiate a BaggingClassifier 'bc'\n",
+    "bc = BaggingClassifier(base_estimator=dt, n_estimators=300)\n",
+    "\n",
+    "# Get accuracy score using CV for dt\n",
+    "scores = cross_val_score(dt, X, y, cv=5, scoring='accuracy')\n",
+    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Decision Tree'))\n",
+    "\n",
+    "# Get accuracy score using CV for bc\n",
+    "scores = cross_val_score(bc, X, y, cv=5, scoring='accuracy')\n",
+    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Bagging'))"
    ]
   },
   {
@@ -175,6 +234,16 @@
    "source": [
     "___\n",
     "## **Boosting**\n",
+    "\n",
+    "Advantages:\n",
+    "\n",
+    "    Supports different loss function (we have used ‘binary:logistic’ for this example).\n",
+    "    Works well with interactions.\n",
+    "\n",
+    "Disadvantages:\n",
+    "\n",
+    "    Prone to over-fitting.\n",
+    "    Requires careful tuning of different hyper-parameters.\n",
     "\n",
     "\n",
     "Gradiant Boosting Machines / Stochastic Gradient Boosting\n",
@@ -197,6 +266,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "## **Which is the best:** Voting, Bagging, Boosting, or Stacking?\n",
+    "\n",
+    "There’s not an outright winner; it depends on the data, the simulation and the circumstances.\n",
+    "Bagging and Boosting decrease the variance of your single estimate as they combine several estimates from different models. So the result may be a model with higher stability.\n",
+    "\n",
+    "If the problem is that the single model gets a very low performance, Bagging will rarely get a better bias. However, Boosting could generate a combined model with lower errors as it optimises the advantages and reduces pitfalls of the single model.\n",
+    "\n",
+    "By contrast, if the difficulty of the single model is over-fitting, then Bagging is the best option. Boosting for its part doesn’t help to avoid over-fitting; in fact, this technique is faced with this problem itself. For this reason, Bagging is effective more often than Boosting.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "___\n",
     "## **References**\n",
@@ -204,7 +293,10 @@
     "[1] https://scikit-learn.org/stable/modules/ensemble.html#voting-classifier\n",
     "\n",
     "[2] https://towardsdatascience.com/understanding-the-bias-variance-tradeoff-165e6942b229\n",
-    "\n"
+    "\n",
+    "[3] https://machinelearningmastery.com/bagging-and-random-forest-ensemble-algorithms-for-machine-learning/\n",
+    "\n",
+    "[4] https://machinelearningmastery.com/boosting-and-adaboost-for-machine-learning/\n"
    ]
   },
   {
