--- a/Ensemble Learning/Ensemble Learning.ipynb
+++ b/Ensemble Learning/Ensemble Learning.ipynb
@@ -17,8 +17,8 @@
     "\n",
     "1. Voting \n",
     "2. Bagging \n",
-    "3. Boosting\n",
-    "4. Stacking\n",
+    "3. Stacking\n",
+    "4. Boosting\n",
     "\n",
     "In the literature, most of these approaches use decision trees, but almost any method(s) can be used with each. Empirically, ensembles tend to yield better results when there is a significant diversity among the models. Many ensemble methods, therefore, seek to promote diversity among the models they combine. \n",
     "\n",
@@ -233,7 +233,22 @@
    "metadata": {},
    "source": [
     "___\n",
+    "## **Stacking**\n",
+    "\n",
+    "\n",
+    "\n",
+    "stacknet?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
     "## **Boosting**\n",
+    "\n",
+    "Boosting refers to an ensemble method in which several models are trained sequentially with each model learning from the errors of its predecessors. \n",
     "\n",
     "Advantages:\n",
     "\n",
@@ -253,20 +268,6 @@
     "catboost\n",
     "H2O"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___\n",
-    "## **Stacking**\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
