--- a/Ensemble Learning/Random Forests.ipynb
+++ b/Ensemble Learning/Random Forests.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "**Advantages:**\n",
     "- They reduce overfitting.\n",
-    "- No need for feature normalization.\n",
+    "- No need for feature normalization/scaling!\n",
     "- Easy to measure the relative importance of each feature.\n",
     "- Can handle categorical and numerical features.\n",
     "\n",
@@ -224,15 +224,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In extremely randomized trees, or ExtraTrees (ET), are the same are random trees with two main differences. \n",
+    "Extremely randomized trees, or ExtraTrees (ET), are the same as random forests with two slight differences:\n",
     "\n",
-    "1. As in random forests, a random subset of candidate features is used, but instead of looking for the most discriminative thresholds (the  optimal cut-point for each feature based on information gain), **thresholds are drawn at random for each candidate feature** and the best of these randomly-generated thresholds is picked as the splitting rule. This threshold (random cut point) is selected from a uniform distribution within the feature's empirical range (in the tree's training set). Then, of all the randomly generated splits, the split that yields the highest score is chosen to split the node. Similar to ordinary random forests, the number of randomly selected features to be considered at each node can be specified.\n",
+    "1. As in RF's, a random subset of candidate features is used with ET's, but instead of looking for the most discriminative thresholds (the  optimal cut-point for each feature based on information gain), **thresholds are drawn at random for each candidate feature** and the best of these randomly-generated thresholds is picked as the splitting rule. \n",
+    "    - This threshold (random cut point) is selected from a uniform distribution within the feature's empirical range (in the tree's training set). Then, of all the randomly generated splits, the split that yields the highest score is chosen to split the node. Similar to ordinary RF's, the number of randomly selected features to be considered at each node can be specified.\n",
     "\n",
     "2. Each tree is trained using the whole training set (rather than a bootstrap sample). \n",
     "\n",
-    "This usually allows to **reduce the variance** of the model a bit more, at the expense of a **slightly greater increase in bias**. Both RF and ET give similar performance, but ET's can be computationally faster and may give higher performance in presence of many noisy features. Both methods typically perform equally in the presence of many relevant features.\n",
+    "These differences usually allow to **reduce the variance** of the model a bit more, at the expense of a **slightly greater increase in bias**. ET's are computationally faster than RF's and may give higher performance in presence of many noisy features. Both methods typically perform equally well in the presence of many relevant features.\n",
     "\n",
-    "*Note that in random forests, bootstrap samples are used by default (bootstrap=True) while the default strategy for extra-trees is to use the whole dataset (bootstrap=False). When using bootstrap sampling the generalization accuracy can be estimated on the left out or out-of-bag samples. This can be enabled by setting oob_score=True.*"
+    "*Note that in RF's, bootstrap samples are used by default (bootstrap=True) while the default strategy for ET's is to use the whole dataset (bootstrap=False). When using bootstrap sampling the generalization accuracy can be estimated on the left out or out-of-bag samples. This can be enabled by setting oob_score=True.*"
    ]
   },
   {
@@ -250,13 +251,6 @@
     "\n",
     "[4] https://machinelearningmastery.com/bagging-and-random-forest-ensemble-algorithms-for-machine-learning/\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
